<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCMainActivity"
    android:background="@color/bg_app">

<androidx.cardview.widget.CardView
    android:id="@+id/viewMale"
    android:layout_width="0dp"
    android:layout_height="150dp"
    app:cardBackgroundColor="@color/bg_comp_sel"
    app:cardCornerRadius="16dp"
    android:layout_margin="16dp"
    android:layout_marginEnd="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/viewFemale"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/female"
            app:tint="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mujer"
            android:textAllCaps="true"
            android:textColor="@color/white"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:id="@+id/viewFemale"
    android:layout_width="0dp"
    android:layout_height="150dp"
    app:cardBackgroundColor="@color/bg_comp"
    app:cardCornerRadius="16dp"
    android:layout_margin="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/viewMale"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/male"
            app:tint="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hombre"
            android:textAllCaps="true"
            android:textColor="@color/white"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/bg_comp"
    app:cardCornerRadius="16dp"
    android:layout_marginTop="32dp"
    android:layout_margin="16dp"
    app:layout_constraintTop_toBottomOf="@+id/viewMale"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/viewHeight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textAllCaps="true"
            android:textColor="@color/title_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeight"
            android:text="@string/_120_cm"
            android:textSize="38sp"
            android:textColor="@color/white"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rsHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="120"
            android:valueTo="200" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:layout_width="0dp"
    android:layout_height="150dp"
    app:cardBackgroundColor="@color/bg_comp"
    app:cardCornerRadius="16dp"
    android:layout_marginTop="16dp"
    android:layout_margin="16dp"
    app:layout_constraintTop_toBottomOf="@id/viewHeight"
    app:layout_constraintStart_toStartOf="parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">
        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edad"
            android:textAllCaps="true"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/viewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAllCaps="true"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSubtractAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_fab"
                app:tint="@color/white"
                android:src="@drawable/minus"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAddAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_fab"
                app:tint="@color/white"
                android:src="@drawable/plus"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
<androidx.cardview.widget.CardView
    android:id="@+id/pesoCard"
    android:layout_width="0dp"
    android:layout_height="150dp"
    app:cardBackgroundColor="@color/bg_comp"
    app:cardCornerRadius="16dp"
    android:layout_marginTop="16dp"
    android:layout_margin="16dp"
    app:layout_constraintTop_toBottomOf="@id/viewHeight"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/peso"
            android:textAllCaps="true"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/viewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAllCaps="true"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSubtractWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_fab"
                android:tint="@color/white"
                android:src="@drawable/minus"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAddWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_fab"
                android:tint="@color/white"
                android:src="@drawable/plus"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/botonCalcular"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:text="@string/calcular"
    android:textSize="32sp"
    android:textColor="@color/white"
    android:backgroundTint="@color/bg_button"
    android:gravity="center"
    android:layout_margin="16dp"
    app:layout_constraintTop_toBottomOf="@id/pesoCard"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>





















